--- a/shipping/Dockerfile
+++ b/shipping/Dockerfile
@@ -3,7 +3,7 @@ WORKDIR /opt/server
 COPY pom.xml .
 COPY src opt/server/src
 RUN mvn clean package 
-COPY mv /opt/server/target/shipping-1.0jar /opt/server/shipping.jar
+RUN mv /opt/server/target/shipping-1.0jar /opt/server/shipping.jar
 ENV CART_ENDPOINT="cart:8080" \
     DB_HOST="mysql"
 CMD ["java","-jar","shipping.jar"]    
