--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ networks:
  default:
   driver: bridge
   name: roboshop
-  external: true #to create network
+  #external: true
 
 services:
   mongodb:
