--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -42,4 +42,11 @@ services:
     container_name: shipping
     depends_on:
     - mysql
-    - cart      
+    - cart   
+
+  rabbitmq:
+    image: rebbitmq:3
+    container_name: rabbitmq
+    environment:
+     RABBITMQ_DEFAULT_USER: roboshop
+     RABBITMQ_DEFAULT_PASS: roboshop123     
