--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -45,7 +45,7 @@ services:
     - cart   
 
   rabbitmq:
-    image: rebbitmq:3
+    image: rabbitmq:3
     container_name: rabbitmq
     environment:
      RABBITMQ_DEFAULT_USER: roboshop
