--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -66,3 +66,15 @@ services:
     - rabbitmq
     - cart
     - user
+
+  frontend:
+   image: venuuu/frontend:v1
+   container_name: frontend
+   ports:
+   - "80:80"
+   depends_on:
+   - catalogue
+   - user
+   - cart
+   - shipping
+   - payment  
