--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,69 +1,60 @@
 networks:
- default:
-  driver: bridge
-  name: roboshop
-  #external: true
+  default:
+    driver: bridge
+    name: roboshop
+    #external: true #I created network already using docker network create roboshop
 volumes:
- mongodb:
- redis:
- mysql:
- rabbitmq:  
-
+  mongodb:
+  redis:
+  mysql:
+  rabbitmq: # docker volume create rabbitmq
 services:
   mongodb:
     image: venuuu/mongodb:v1
     container_name: mongodb
     volumes:
-    - mongodb:/data/db 
-
+    - mongodb:/data/db
   catalogue:
     image: venuuu/catalogue:v1
     container_name: catalogue
     depends_on:
     - mongodb
-
   redis:
     image: redis:7.0
     container_name: redis
     volumes:
     - redis:/data
-
   user:
     image: venuuu/user:v1
     container_name: user
     depends_on:
     - redis
-    - mongodb      
-
+    - mongodb
   cart:
     image: venuuu/cart:v1
     container_name: cart
     depends_on:
     - catalogue
     - redis
-
   mysql:
     image: venuuu/mysql:v1
     container_name: mysql
     volumes:
     - mysql:/var/lib/mysql
-
   shipping:
     image: venuuu/shipping:v1
     container_name: shipping
     depends_on:
     - mysql
-    - cart   
-
+    - cart
   rabbitmq:
     image: rabbitmq:3
     container_name: rabbitmq
     environment:
-     RABBITMQ_DEFAULT_USER: roboshop
-     RABBITMQ_DEFAULT_PASS: roboshop123
+      RABBITMQ_DEFAULT_USER: roboshop
+      RABBITMQ_DEFAULT_PASS: roboshop123
     volumes:
-    - rabbitmq:/var/lib/rabbitmq      
-
+    - rabbitmq:/var/lib/rabbitmq
   payment:
     image: venuuu/payment:v1
     container_name: payment
@@ -73,21 +64,21 @@ services:
       USER_HOST: user
       USER_PORT: 8080
       AMQP_HOST: rabbitmq
-      AMQP_USER: roboshop  
+      AMQP_USER: roboshop
       AMQP_PASS: roboshop123
     depends_on:
     - rabbitmq
     - cart
     - user
-
   frontend:
-   image: venuuu/frontend:v1
-   container_name: frontend
-   ports:
-   - "80:80"
-   depends_on:
-   - catalogue
-   - user
-   - cart
-   - shipping
-   - payment  
+    image: venuuu/frontend:v1
+    container_name: frontend
+    ports:
+    - "80:80"
+    depends_on:
+    - catalogue
+    - user
+    - cart
+    - shipping
+    - payment
+      
