--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -16,7 +16,7 @@ RUN touch /var/run/nginx.pid && \
     chown -R nginx:nginx /var/run/nginx.pid /run/nginx.pid
 ADD nginx.conf /etc/nginx/nginx.conf
 ADD static /usr/share/nginx/html/
-USER nginx
+#USER nginx
 CMD ["nginx","-g","daemon off;"]
 
 
