--- a/payment/Dockerfile
+++ b/payment/Dockerfile
@@ -14,8 +14,8 @@ WORKDIR /opt/server
 # Runtime dependencies only
 RUN apk add --no-cache pcre
 # Create app user
-RUN addgroup -S roboshop && adduser -S roboshop -G roboshop
-USER roboshop
+# RUN addgroup -S roboshop && adduser -S roboshop -G roboshop
+# USER roboshop
 # Copy installed Python packages from builder
 COPY --from=builder /install /usr/local
 # Copy application code
